--- a/server/package.json
+++ b/server/package.json
@@ -16,11 +16,13 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "csrf": "^3.1.0",
+    "csurf": "^1.11.0",
     "dotenv": "^16.0.3",
     "esm": "^3.2.25",
     "express": "^4.18.2",
+    "express-jwt": "^8.4.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.1",
     "morgan": "^1.10.0"
